# notifications-service

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
